list of products page fixed on mobile, footer added to all pages, links fixed

--- a/listofproducts.css
+++ b/listofproducts.css
@@ -85,6 +85,23 @@
         margin-bottom: 0.5rem;
     }
     .main-products {
+        flex-direction: row;
+        flex-wrap: wrap !important;
+        overflow-x: hidden !important;
+    }
+}
+
+@media screen and (max-width: 400px) {
+    .main-product, .main-product button, .main-product p {
+        width: 150px !important;
+        min-width: 150px;
+        height: auto;
+    }
+    .main-product img {
+        width: 100% !important;
+        height: 225px !important;
+    }
+    .main-products {
         flex-wrap: wrap !important;
         overflow-x: hidden !important;
     }
@@ -95,6 +112,7 @@
         justify-content: space-evenly;
         min-width: 100% !important;
         max-width: 100% !important;
+        gap: 0rem;
     }
 }
 
