--- a/product.css
+++ b/product.css
@@ -14,7 +14,6 @@
 }
 .product-image img {
     display: flex;
-    min-width: 400px;
     max-width: 25vw;
     height: auto;
     margin-right: 4vw;
